--- a/WebTerm/templates/index.html
+++ b/WebTerm/templates/index.html
@@ -63,6 +63,7 @@
         var countdown;
         var connected;
         var terminalPort;
+        var failedTimes=0;
 
         window.onunload = window.onbeforeunload = function(){
             if(connected){
@@ -74,7 +75,26 @@
         };
 
         document.getElementById('terminal').onload = () => {
-            if(connected && document.getElementById("terminal").src === window.location.href){
+            {#console.log("loaded!");#}
+            try{
+                if(failedTimes<=2){
+                    document.getElementById('terminal').contentWindow.location.href;
+                }
+                else{
+                    console.log("iframe failed", failedTimes, "times, stopped attempting");
+                    failedTimes=0;
+                    return;
+                }
+            }
+            catch (e) {
+                document.getElementById('terminal').src = document.getElementById('terminal').src;
+                failedTimes+=1;
+                console.log("iframe failed times:", failedTimes);
+                return;
+            }
+            failedTimes = 0;
+
+            if(connected && document.getElementById("terminal").src === window.location.href){ //just disconnected
                 clearInterval(countdown);
                 document.getElementById("message").innerText="";
                 document.getElementById("countdown").innerText="";
