testing new method iframe

--- a/WebTerm/templates/index.html
+++ b/WebTerm/templates/index.html
@@ -64,6 +64,52 @@
         var connected;
         var terminalPort;
         var failedTimes=0;
+        var onIframeReady = function ($i, successFn, errorFn) {
+            try {
+                const iCon = $i.first()[0].contentWindow,
+                    bl = "about:blank",
+                    compl = "complete";
+                const callCallback = () => {
+                    try {
+                        const $con = $i.contents();
+                        if ($con.length === 0) { // https://git.io/vV8yU
+                            throw new Error("iframe inaccessible");
+                        }
+                        successFn($con);
+                    } catch (e) { // accessing contents failed
+                        errorFn();
+                    }
+                };
+                const observeOnload = () => {
+                    $i.on("load.jqueryMark", () => {
+                        try {
+                            const src = $i.attr("src").trim(),
+                                href = iCon.location.href;
+                            if (href !== bl || src === bl || src === "") {
+                                $i.off("load.jqueryMark");
+                                callCallback();
+                            }
+                        } catch (e) {
+                            errorFn();
+                        }
+                    });
+                };
+                if (iCon.document.readyState === compl) {
+                    const src = $i.attr("src").trim(),
+                        href = iCon.location.href;
+                    if (href === bl && src !== bl && src !== "") {
+                        observeOnload();
+                    } else {
+                        callCallback();
+                    }
+                } else {
+                    observeOnload();
+                }
+            } catch (e) { // accessing contentWindow failed
+                errorFn();
+            }
+        };
+
 
         window.onunload = window.onbeforeunload = function(){
             if(connected){
@@ -81,26 +127,26 @@
                 document.getElementById("countdown").innerText="";
                 connected = false;
                 $("#disconnect").prop("disabled", true);
-                return;
+                {#return;#}
             }
-            setTimeout(function() {
-                if (failedTimes < 3) {
-                    try {
-                        console.log(document.getElementById('terminal').contentWindow.location.href);
-                    } catch (e) {
-                        console.log(e);
-                        if (e instanceof DOMException) {
-                            document.getElementById('terminal').src = document.getElementById('terminal').src;
-                            failedTimes += 1;
-                            console.log("iframe failed times:", failedTimes);
-                            return;
-                        }
-                    }
-                } else {
-                    console.log("iframe failed", failedTimes, "times, stopped attempting");
-                }
-                failedTimes = 0;
-            }, 5000);
+            {#setTimeout(function() {#}
+            {#    if (failedTimes < 3) {#}
+            {#        try {#}
+            {#            console.log(document.getElementById('terminal').contentWindow.location.href);#}
+            {#        } catch (e) {#}
+            {#            console.log(e);#}
+            {#            if (e instanceof DOMException) {#}
+            {#                document.getElementById('terminal').src = document.getElementById('terminal').src;#}
+            {#                failedTimes += 1;#}
+            {#                console.log("iframe failed times:", failedTimes);#}
+            {#                return;#}
+            {#            }#}
+            {#        }#}
+            {#    } else {#}
+            {#        console.log("iframe failed", failedTimes, "times, stopped attempting");#}
+            {#    }#}
+            {#    failedTimes = 0;#}
+            {# }, 5000);#}
         };
 
         function disconnect() {
@@ -152,6 +198,12 @@
                           ConnectedDeviceId = CurrDeviceId;
                           ConnectedDeviceName = CurrDeviceName;
                           document.getElementById("id").innerText = ConnectedDeviceName;
+                          onIframeReady($("terminal"), function ($contents) {
+                              console.log("Ready to got");
+                              {#console.log($contents.find("*"));#}
+                          }, function () {
+                              console.log("Can not access iframe");
+                          });
                       }
                       startCountDown(result.lastAccessTime);
                   }
