iframe failed to detect failure

--- a/WebTerm/templates/index.html
+++ b/WebTerm/templates/index.html
@@ -64,51 +64,51 @@
         var connected;
         var terminalPort;
         var failedTimes=0;
-        var onIframeReady = function ($i, successFn, errorFn) {
-            try {
-                const iCon = $i.first()[0].contentWindow,
-                    bl = "about:blank",
-                    compl = "complete";
-                const callCallback = () => {
-                    try {
-                        const $con = $i.contents();
-                        if ($con.length === 0) { // https://git.io/vV8yU
-                            throw new Error("iframe inaccessible");
-                        }
-                        successFn($con);
-                    } catch (e) { // accessing contents failed
-                        errorFn();
-                    }
-                };
-                const observeOnload = () => {
-                    $i.on("load.jqueryMark", () => {
-                        try {
-                            const src = $i.attr("src").trim(),
-                                href = iCon.location.href;
-                            if (href !== bl || src === bl || src === "") {
-                                $i.off("load.jqueryMark");
-                                callCallback();
-                            }
-                        } catch (e) {
-                            errorFn();
-                        }
-                    });
-                };
-                if (iCon.document.readyState === compl) {
-                    const src = $i.attr("src").trim(),
-                        href = iCon.location.href;
-                    if (href === bl && src !== bl && src !== "") {
-                        observeOnload();
-                    } else {
-                        callCallback();
-                    }
-                } else {
-                    observeOnload();
-                }
-            } catch (e) { // accessing contentWindow failed
-                errorFn();
-            }
-        };
+        {#var onIframeReady = function ($i, successFn, errorFn) {#}
+        {#    try {#}
+        {#        const iCon = $i.first()[0].contentWindow,#}
+        {#            bl = "about:blank",#}
+        {#            compl = "complete";#}
+        {#        const callCallback = () => {#}
+        {#            try {#}
+        {#                const $con = $i.contents();#}
+        {#                if ($con.length === 0) { // https://git.io/vV8yU#}
+        {#                    throw new Error("iframe inaccessible");#}
+        {#                }#}
+        {#                successFn($con);#}
+        {#            } catch (e) { // accessing contents failed#}
+        {#                errorFn();#}
+        {#            }#}
+        {#        };#}
+        {#        const observeOnload = () => {#}
+        {#            $i.on("load.jqueryMark", () => {#}
+        {#                try {#}
+        {#                    const src = $i.attr("src").trim(),#}
+        {#                        href = iCon.location.href;#}
+        {#                    if (href !== bl || src === bl || src === "") {#}
+        {#                        $i.off("load.jqueryMark");#}
+        {#                        callCallback();#}
+        {#                    }#}
+        {#                } catch (e) {#}
+        {#                    errorFn();#}
+        {#                }#}
+        {#            });#}
+        {#        };#}
+        {#        if (iCon.document.readyState === compl) {#}
+        {#            const src = $i.attr("src").trim(),#}
+        {#                href = iCon.location.href;#}
+        {#            if (href === bl && src !== bl && src !== "") {#}
+        {#                observeOnload();#}
+        {#            } else {#}
+        {#                callCallback();#}
+        {#            }#}
+        {#        } else {#}
+        {#            observeOnload();#}
+        {#        }#}
+        {#    } catch (e) { // accessing contentWindow failed#}
+        {#        errorFn();#}
+        {#    }#}
+        {# };#}
 
 
         window.onunload = window.onbeforeunload = function(){
@@ -129,6 +129,10 @@
                 $("#disconnect").prop("disabled", true);
                 {#return;#}
             }
+            {#console.log(document.getElementById("terminal").contentWindow);#}
+            {#if($("#sub-frame-error-details").innerHTML.includes(" refused to connect.")){#}
+            {#    console.log(" refused to connect.");#}
+            {# }#}
             {#setTimeout(function() {#}
             {#    if (failedTimes < 3) {#}
             {#        try {#}
@@ -198,12 +202,12 @@
                           ConnectedDeviceId = CurrDeviceId;
                           ConnectedDeviceName = CurrDeviceName;
                           document.getElementById("id").innerText = ConnectedDeviceName;
-                          onIframeReady($("terminal"), function ($contents) {
-                              console.log("Ready to got");
+                          {#onIframeReady($("terminal"), function ($contents) {#}
+                          {#    console.log("Ready to got");#}
                               {#console.log($contents.find("*"));#}
-                          }, function () {
-                              console.log("Can not access iframe");
-                          });
+                          {# }, function () {#}
+                          {#    console.log("Can not access iframe");#}
+                          {# });#}
                       }
                       startCountDown(result.lastAccessTime);
                   }
