--- a/WebTerm/templates/index.html
+++ b/WebTerm/templates/index.html
@@ -33,7 +33,7 @@
                 </div>
             </div>
             <div class="float-left">
-                <div id="id" class="float-left">0</div>
+                <div id="id" class="float-left">No device connected</div>
                 <div id="message" class="float-left" style="margin-left: 10px; margin-right: 10px"></div>
                 <div id="countdown" class="float-left"></div>
             </div>
@@ -56,10 +56,10 @@
 
     <script>
         var device_list=[];
-        var CurrDeviceId;
-        var CurrDeviceName;
-        var ConnectedDeviceId;
-        var ConnectedDeviceName;
+        var CurrDeviceId="";
+        var CurrDeviceName="";
+        var ConnectedDeviceId="";
+        var ConnectedDeviceName="";
         var countdown;
         var connected;
         var terminalPort;
@@ -123,6 +123,9 @@
         document.getElementById('terminal').onload = () => {
             if(connected && document.getElementById("terminal").src === window.location.href){ //just disconnected
                 clearInterval(countdown);
+                ConnectedDeviceId="";
+                ConnectedDeviceName="No device connected";
+                document.getElementById("id").innerText=ConnectedDeviceName;
                 document.getElementById("message").innerText="";
                 document.getElementById("countdown").innerText="";
                 connected = false;
@@ -181,6 +184,11 @@
                 return;
             }
 
+            if(CurrDeviceId===""){
+                alert("Please select a device");
+                return;
+            }
+
             console.log("Connecting to device with DeviceId:", CurrDeviceId);
             $.ajax({
               url: "/terminal/",
@@ -195,13 +203,13 @@
                       }
                       else{
                           terminalPort = result.port;
-                          document.getElementById("terminal").src = "http://" + document.domain + ":" + result.port;
-                          document.getElementById("message").innerText=" Your session will expire after ";
-                          connected = true;
-                          $("#disconnect").prop("disabled", false);
                           ConnectedDeviceId = CurrDeviceId;
                           ConnectedDeviceName = CurrDeviceName;
+                          connected = true;
                           document.getElementById("id").innerText = ConnectedDeviceName;
+                          document.getElementById("terminal").src = "http://" + document.domain + ":" + result.port;
+                          document.getElementById("message").innerText=" Your session will expire after ";
+                          $("#disconnect").prop("disabled", false);
                           {#onIframeReady($("terminal"), function ($contents) {#}
                           {#    console.log("Ready to got");#}
                               {#console.log($contents.find("*"));#}
@@ -209,7 +217,7 @@
                           {#    console.log("Can not access iframe");#}
                           {# });#}
                       }
-                      startCountDown(result.lastAccessTime);
+                      startCountDown(result.lastAccessTime, result.timeoutSec);
                   }
                   else{
                       alert(result.message)
@@ -226,13 +234,23 @@
         function getDevices() {
             console.log("Getting device list");
             connected = false;
+            {#document.getElementById("id").innerText = ConnectedDeviceName;#}
             $("#disconnect").prop("disabled", true);
             var source = new WebSocket("ws://" + window.location.host + "/ws/devices/");
             source.onmessage = function(event) {
-                console.log("Received device list");
-                device_list = JSON.parse(event.data);
-                console.log(device_list);
-                showDropdown();
+                {#console.log(event.data);#}
+                result = JSON.parse(event.data);
+                console.log(result);
+                if(result.success){
+                    console.log("Received device list");
+                    device_list = result.deviceList;
+                    console.log(device_list);
+                    showDropdown();
+                }
+                else{
+                    alert(event.data.message)
+                }
+
             };
             source.onerror = function (error) {
                 console.log(error)
@@ -257,14 +275,23 @@
             showDropdown();
         }
         
-        function startCountDown(last_access_time) {
+        function startCountDown(last_access_time, timeoutSec) {
             countdown = setInterval(function() {
 
               // Get today's date and time
               var now = new Date().getTime();
 
               // Find the distance between now and the count down date
-              var distance = 1200000 + Date.parse(last_access_time) - now;
+              var distance = timeoutSec * 1000 + Date.parse(last_access_time) - now;
+
+              // If the count down is finished, write some text
+              if (distance < 0) {
+                clearInterval(countdown);
+                document.getElementById("countdown").innerHTML = "EXPIRED";
+                {#connected = false;#}
+                {#$("#disconnect").prop("disabled", true);#}
+                {#  disconnect()#}
+              }
 
               // Time calculations for hours, minutes and seconds
               var hours = Math.floor(distance / 3600000);
@@ -273,14 +300,6 @@
 
               document.getElementById("countdown").innerHTML = hours + "h "
               + minutes + "m " + seconds + "s ";
-
-              // If the count down is finished, write some text
-              if (distance < 0) {
-                clearInterval(countdown);
-                document.getElementById("countdown").innerHTML = "EXPIRED";
-                connected = false;
-                $("#disconnect").prop("disabled", true);
-              }
             }, 1000);
         }
     </script>
