fixed frontend alert bug

--- a/WebTerm/templates/index.html
+++ b/WebTerm/templates/index.html
@@ -15,7 +15,6 @@
         .green-dot {
             height: 8px;
             width: 8px;
-            background-color: #bbb;
             border-radius: 50%;
             display: inline-block;
             background-color: lightgreen;
@@ -24,7 +23,6 @@
         .red-dot {
             height: 8px;
             width: 8px;
-            background-color: #bbb;
             border-radius: 50%;
             display: inline-block;
             background-color: red;
@@ -189,7 +187,7 @@
                     showDropdown();
                 }
                 else{
-                    alert(event.data.message)
+                    alert(result.message)
                 }
 
             };
@@ -234,6 +232,7 @@
               if (distance < 0) {
                 clearInterval(countdown);
                 document.getElementById("countdown").innerHTML = "EXPIRED";
+                return;
               }
 
               // Time calculations for hours, minutes and seconds
